--- a/index.html
+++ b/index.html
@@ -191,6 +191,90 @@
           </div>
        </section>
 
+       <!-- article and news -->
+        <section class="w-3/4 mx-auto pb-14">
+          <div class=" text-center mb-5">
+            <div class="w-[180px] h-[38px] bg-[#d9f99d] flex justify-center items-center space-x-1 bg-[#FFFFFF] rounded-3xl my-2 mx-auto">
+              <i class="fa-solid fa-arrow-right"></i>
+              <p>Renterio News</p>
+            </div>
+            <h1 class="font-bold text-[2.5rem]">Read Our Articles and News</h1>
+            <p>The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+            
+           </div>
+           <!-- cards -->
+           <div class="flex gap-3">
+            <div class="card bg-base-100  shadow-xl">
+              <figure>
+                <img src="images/article1.png"
+                  alt="Shoes" class="p-4" />
+              </figure>
+              <div class="card-body">
+                <div class="flex">
+                  <i class="fa-solid fa-calendar-days mr-2"></i>
+                <p>24 july, 2024</p>
+                <i class="fa-solid fa-user mr-2"></i>
+                <p>By Admin</p>
+                </div>
+                <h2 class="card-title">How to choose the furniture right  of your home.</h2>
+                <p>The barn house captivates with its blend of rustic charm and modern. </p>
+                </div>
+                <div class="flex h-[50px] w-[206px]  items-center justify-center rounded-3xl ">
+                  <p>Read More</p>
+                  <div class="w-[30px] h-[30px] bg-[#ABEF5F] rounded-full ml-2">
+                      <i class="fa-solid fa-arrow-right -rotate-45 ml-2 mt-2"></i>
+                   </div>
+              </div>
+            </div>
+
+            <div class="card bg-base-100  shadow-xl">
+              <figure>
+                <img src="images/article2.png" class="p-4"
+                  alt="Shoes" />
+              </figure>
+              <div class="card-body">
+                <div class="flex">
+                  <i class="fa-solid fa-calendar-days mr-2"></i>
+                <p>24 july, 2024</p>
+                <i class="fa-solid fa-user mr-2"></i>
+                <p>By Admin</p>
+                </div>
+                <h2 class="card-title">How to choose the furniture right  of your home.</h2>
+                <p>The barn house captivates with its blend of rustic charm and modern. </p>
+                </div>
+                <div class="flex h-[50px] w-[206px]  items-center justify-center rounded-3xl ">
+                  <p>Read More</p>
+                  <div class="w-[30px] h-[30px] bg-[#ABEF5F] rounded-full ml-2">
+                      <i class="fa-solid fa-arrow-right -rotate-45 ml-2 mt-2"></i>
+                   </div>
+              </div>
+            </div>
+
+            <div class="card bg-base-100  shadow-xl">
+              <figure>
+                <img
+                  src="images/article3.png" alt="Shoes" class="p-4" />
+              </figure>
+              <div class="card-body">
+                <div class="flex">
+                  <i class="fa-solid fa-calendar-days mr-2"></i>
+                <p>24 july, 2024</p>
+                <i class="fa-solid fa-user mr-2"></i>
+                <p>By Admin</p>
+                </div>
+                <h2 class="card-title">How to choose the furniture right  of your home.</h2>
+                <p>The barn house captivates with its blend of rustic charm and modern. </p>
+                </div>
+                <div class="flex h-[50px] w-[206px]  items-center justify-center rounded-3xl ">
+                  <p>Read More</p>
+                  <div class="w-[30px] h-[30px] bg-[#ABEF5F] rounded-full ml-2">
+                      <i class="fa-solid fa-arrow-right -rotate-45 ml-2 mt-2"></i>
+                   </div>
+              </div>
+            </div>
+           </div>
+        </section>
+
        <!-- Next project -->
         <section class="bg-[url('')]">
 
