--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
 
      <style>
-    .manrope {
+    .font-manrope {
   font-family: "Manrope", sans-serif;
   
 }
@@ -294,8 +294,8 @@
 
        <!-- article and news -->
         <section class="w-3/4 mx-auto pb-14">
-          <div class=" text-center mb-5">
-            <div class="w-[180px] h-[38px] bg-[#d9f99d] flex justify-center items-center space-x-1  rounded-3xl my-2 mx-auto">
+          <div class=" text-center mb-5 pt-7">
+            <div class="w-[180px] h-[38px] bg-[#d9f99d] flex justify-center items-center space-x-1  rounded-3xl my-2 mx-auto ">
               <i class="fa-solid fa-arrow-right"></i>
               <p>Renterio News</p>
             </div>
@@ -377,7 +377,7 @@
         </section>
 
         <!-- unique part -->
-        <section class="lg:w-3/4 md:w-3/4 mx-auto">
+        <section class="lg:w-3/4 md:w-3/4 mx-auto pb-5">
           <div class="hero  min-h-screen">
             <div class="hero-content  flex-col-reverse lg:flex-row">
               <img
@@ -402,7 +402,7 @@
         </section>
 
        <!-- Next project -->
-        <section class="bg-[]">
+        <section class=" bg-cover pb-5" style="background-image: url(images/bg.jpg);">
           <div class=" text-center p-3">
             <div class="w-[150px] h-[38px] flex justify-center items-center space-x-1 bg-[#d9f99d] rounded-3xl my-2 mx-auto">
               <i class="fa-solid fa-arrow-right"></i>
